@@ -39,6 +39,6 @@ function gpumem()
 end
 
 # This is for profiling:
-gpusync()=device_synchronize()
+# gpusync()=device_synchronize()
 # This is for production:
-# gpusync()=nothing
+gpusync()=nothing
